Remove QFile::encodeName when passing QString

BUG: 189156

svn path=/trunk/extragear/graphics/digikam/; revision=998017